# multidisciplinary-analysis-of-prompts

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Cognitive Chain of Thought (CCT) Model in Mojo.ini  Cursor-Rules-for-ClaudeMetaResearch-Project.cursorrules  Dockerfile  README.md  To get an API key for your Google Cloud .md  additional-tags-emerge.md  analysis of tag additional markers of type.md  dev.sh  docker-compose.yml  errorcodeQL.txt  file-renaming-strategy.cursorrules  framework-analysis-v1-prompt.yaml.cursorrules  geminiexp1206personalprompt.cursorrules  googleflash.py  java-jdk-error.txt  meta-analysis-mojo-revision.md  mojo-not-python.cursorrules  mojo-revision.md  mojo_usage.yaml  mypy.ini  omponent Breakdown and Functional Description.yaml  package.mojo  pixi.toml  proj-analysis-current-stage.md  pyproject.toml  readme.txt  requirements-dev.txt  requirements.txt  revisionProposal.md  setup.py  sleep-architecture.md  speicific-analysis-features-of-note.md  tag-analysis-two.md  tag-analysis.md  untitled chat worksheet 3.bbaiworksheet  (+2 more)
src/python/: __init__.py  pyproject.toml
src/python/cognitive_framework/tools/: meta_cognitive.py
src/python/computer_use/: __init__.py
src/python/computer_use_demo/: requirements.txt
src/python/examples/: tool_usage.py
src/python/src/analysis/: cognitive_process_analyzer.mojo
src/python/src/core/: __init__.mojo  meta_analysis_core.mojo
src/python/src/tags/: tag_hierarchy.mojo
src/python/src/tools/: base.py  collection.py  evolution.py  mojo_tools.py
src/python/tests/: conftest.py
(+541 files in other folders)
